; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_system.c_acpi_sysfs_table_handler.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/acpi/extr_system.c_acpi_sysfs_table_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.acpi_table_attr = type { i32, i32 }

@GFP_KERNEL = common dso_local global i32 0, align 4
@AE_NO_MEMORY = common dso_local global i32 0, align 4
@dynamic_tables_kobj = common dso_local global i32 0, align 4
@AE_ERROR = common dso_local global i32 0, align 4
@acpi_table_attr_list = common dso_local global i32 0, align 4
@AE_BAD_PARAMETER = common dso_local global i32 0, align 4
@AE_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, i8*)* @acpi_sysfs_table_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acpi_sysfs_table_handler(i32 %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.acpi_table_attr*, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i32, i32* %5, align 4
  switch i32 %9, label %36 [
    i32 129, label %10
    i32 128, label %35
  ]

10:                                               ; preds = %3
  %11 = load i32, i32* @GFP_KERNEL, align 4
  %12 = call %struct.acpi_table_attr* @kzalloc(i32 8, i32 %11)
  store %struct.acpi_table_attr* %12, %struct.acpi_table_attr** %8, align 8
  %13 = load %struct.acpi_table_attr*, %struct.acpi_table_attr** %8, align 8
  %14 = icmp ne %struct.acpi_table_attr* %13, null
  br i1 %14, label %17, label %15

15:                                               ; preds = %10
  %16 = load i32, i32* @AE_NO_MEMORY, align 4
  store i32 %16, i32* %4, align 4
  br label %40

17:                                               ; preds = %10
  %18 = load %struct.acpi_table_attr*, %struct.acpi_table_attr** %8, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 @acpi_table_attr_init(%struct.acpi_table_attr* %18, i8* %19)
  %21 = load i32, i32* @dynamic_tables_kobj, align 4
  %22 = load %struct.acpi_table_attr*, %struct.acpi_table_attr** %8, align 8
  %23 = getelementptr inbounds %struct.acpi_table_attr, %struct.acpi_table_attr* %22, i32 0, i32 1
  %24 = call i32 @sysfs_create_bin_file(i32 %21, i32* %23)
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %26, label %30

26:                                               ; preds = %17
  %27 = load %struct.acpi_table_attr*, %struct.acpi_table_attr** %8, align 8
  %28 = call i32 @kfree(%struct.acpi_table_attr* %27)
  %29 = load i32, i32* @AE_ERROR, align 4
  store i32 %29, i32* %4, align 4
  br label %40

30:                                               ; preds = %17
  %31 = load %struct.acpi_table_attr*, %struct.acpi_table_attr** %8, align 8
  %32 = getelementptr inbounds %struct.acpi_table_attr, %struct.acpi_table_attr* %31, i32 0, i32 0
  %33 = call i32 @list_add_tail(i32* %32, i32* @acpi_table_attr_list)
  br label %34

34:                                               ; preds = %30
  br label %38

35:                                               ; preds = %3
  br label %38

36:                                               ; preds = %3
  %37 = load i32, i32* @AE_BAD_PARAMETER, align 4
  store i32 %37, i32* %4, align 4
  br label %40

38:                                               ; preds = %35, %34
  %39 = load i32, i32* @AE_OK, align 4
  store i32 %39, i32* %4, align 4
  br label %40

40:                                               ; preds = %38, %36, %26, %15
  %41 = load i32, i32* %4, align 4
  ret i32 %41
}

declare dso_local %struct.acpi_table_attr* @kzalloc(i32, i32) #1

declare dso_local i32 @acpi_table_attr_init(%struct.acpi_table_attr*, i8*) #1

declare dso_local i32 @sysfs_create_bin_file(i32, i32*) #1

declare dso_local i32 @kfree(%struct.acpi_table_attr*) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
